Fix layout issues

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -31,8 +31,6 @@ a {
 }
 
 .conversejs-adoption {
-    background: transparent;
-    pointer-events: none;
     position: fixed;
     left: 0px;
     top: 0px;
@@ -40,10 +38,11 @@ a {
     height: 100%;
 }
 
-#conversejs .converse-chatboxes {
-    pointer-events: none;
+.chat-body {
+	overflow: hidden;
 }
 
-#conversejs .converse-chatboxes > * {
-    pointer-events: auto;
+#conversejs.converse-embedded .chatbox {
+	flex-grow: 1 !important;
+	flex-shrink: 1 !important;
 }
